rust/parser-bash/src/snapshots/parse_bash_fragments@tags.bash.snap
---
source: rust/parser-bash/src/lib.rs
assertion_line: 97
expression: parse_info
input_file: fixtures/fragments/bash/tags.bash
---
{
  "language": "bash",
  "syntaxErrors": false,
  "semanticDigest": 1011317184126009197,
  "executionDependencies": [
    {
      "type": "ExecutionDependency",
      "dependencyNode": {
        "type": "Variable",
        "name": "RANDOM",
        "namespace": "fragments/bash/tags.bash"
      },
      "dependencyRelation": "Uses",
      "codeLocation": [
        2,
        6,
        2,
        12
      ]
    }
  ],
  "executionDependents": [
    {
      "type": "ExecutionDependent",
      "dependentNode": {
        "type": "Variable",
        "name": "var1",
        "namespace": "fragments/bash/tags.bash"
      },
      "dependentRelation": "Assigns",
      "codeLocation": [
        1,
        0,
        1,
        19
      ]
    }
  ],
  "executionTags": [
    {
      "type": "ExecutionTag",
      "isGlobal": false,
      "name": "autorun",
      "value": "always"
    },
    {
      "type": "ExecutionTag",
      "isGlobal": false,
      "name": "assigns",
      "value": "var1 only"
    }
  ],
  "executionAuto": "Always"
}
