rust/parser-bash/src/snapshots/parse_bash_fragments@uses.bash.snap
---
source: rust/parser-bash/src/lib.rs
expression: parse_info
input_file: fixtures/fragments/bash/uses.bash

---
{
  "relations": [
    [
      {
        "type": "Use",
        "range": [
          0,
          1,
          0,
          5
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/bash/uses.bash",
        "name": "var1",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          1,
          6,
          1,
          10
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/bash/uses.bash",
        "name": "var2",
        "kind": ""
      }
    ],
    [
      {
        "type": "Assign",
        "range": [
          2,
          0,
          2,
          4
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/bash/uses.bash",
        "name": "var4",
        "kind": "String"
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          2,
          6,
          2,
          10
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/bash/uses.bash",
        "name": "var3",
        "kind": ""
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          3,
          7,
          3,
          11
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/bash/uses.bash",
        "name": "var5",
        "kind": ""
      }
    ]
  ],
  "code_digest": "6b2a910d9854790bc3c17b21a09a25bbfd59d5febab283902ded1ac28a389d20"
}
